--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,7 @@
                             <mainClass>entryPoint.Main</mainClass>
                         </manifest>
                     </archive>
-                    <source>9</source>
-                    <target>9</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
