--- a/src/main/resources/audisp/audisp-remote.conf
+++ b/src/main/resources/audisp/audisp-remote.conf
@@ -1,4 +1,7 @@
 #/etc/audisp/audisp-remote.conf
+# Raptor-Client audisp-remote mode
+# ------------------------------------
+
 
 remote_server = 127.0.0.1
 port = 4789
@@ -7,3 +10,9 @@ transport = tcp
 mode = immediate
 queue_depth = 200
 format = managed
+
+# ------------------------------------
+# Other useful files
+# /etc/audit/auditd.conf
+# /etc/audisp/audisp-remote.conf
+# /etc/audisp/plugins.d/au-remote.conf
