--- a/src/main/resources/audisp/auditd.conf
+++ b/src/main/resources/audisp/auditd.conf
@@ -1,4 +1,6 @@
 # /etc/audit/auditd.conf
+# Raptor-Client audisp-remote mode
+# ------------------------------------
 
 local_events = yes
 log_file = /var/log/audit/audit.log
@@ -31,3 +33,9 @@ enable_krb5 = no
 krb5_principal = auditd
 ##krb5_key_file = /etc/audit/audit.key
 distribute_network = no
+
+# ------------------------------------
+# Other useful files
+# /etc/audit/auditd.conf
+# /etc/audisp/audisp-remote.conf
+# /etc/audisp/plugins.d/au-remote.conf
