--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.0</version>
         </dependency>
     </dependencies>
     <reporting>
